# networkscrambler

./: CMakeLists.txt  InputSection.qml  LICENSE  Main.qml  PacketLossInput.qml  README.md  com.networkscrambler.policy  main.cpp  network-helper.sh  networkemulation.cpp  networkemulation.h  networkmanager.cpp  networkmanager.h  networkscrambler.desktop
DistributionKit/: InstallerappNetworkScrambler.run.md5  appNetworkScrambler.sh
debian/: control  postinst
